--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -17,9 +17,9 @@
 			</header>
 			<section class="note">
 				<div class="titre-menu">
-					<i class="musique fab fa-itunes-note fa-3x"></i>
+					<i class="fab fa-itunes-note fa-3x"></i>
 					<h2>
-					La note enchantée
+						La note enchantée
 					</h2>
 				</div>
 				<aside>
@@ -123,7 +123,7 @@
 					<ul>
 						<li>
 							<p class="dessert">
-							Macaron noisette et chocolat,glace au caramel brun et sel de Guérande 
+							Macaron noisette et chocolat, glace au caramel brun et sel de Guérande 
 							</p>
 						</li>
 						<li>
@@ -146,11 +146,12 @@
 				</aside>
 			</section>
 			<footer class="pied">
-				<div>
+				<div class="wiggle">
 					<a href="mentions-legales.html">Mentions légales</a>
 				</div>
-				<div>
+				<div class="wiggle">
 					<a href="mailto:gmail.com">Contactez-nous</a>
+				</div>	
 			</footer>
 		</main>
 	</body>
