--- a/Le-chic-a-la-francaise.html
+++ b/Le-chic-a-la-francaise.html
@@ -130,10 +130,10 @@
 				</aside>				
 			</section>
 			<footer class="pied">
-				<div>
+				<div class="wiggle">
 					<a href="mentions-legales.html">Mentions légales</a>
 				</div>
-				<div>
+				<div class="wiggle">
 					<a href="mailto:gmail.com">Contactez-nous</a>
 				</div>	
 			</footer>
