--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -16,10 +16,10 @@
 			</header>
 			
 			<footer class="pied">
-				<div>
+				<div class="wiggle">
 					<a href="mentions-legales.html">Mentions légales</a>
 				</div>
-				<div>
+				<div class="wiggle">
 					<a href="mailto:gmail.com">Contactez-nous</a>
 				</div>	
 			</footer>
